<resources>
    <string name="app_name">GladTrade</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Description</string>
    <string name="detail">Description</string>
    <string name="share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sell">Sell</string>
    <string name="lot">Lot:</string>
    <string name="plus">+</string>
    <string name="owning">Owning:</string>
    <string name="buy">Buy</string>
    <string name="current_market_price">Current market price:</string>
    <string name="minus">-</string>
</resources>
