<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8D4BB"
    android:orientation="vertical">


    <TextView
        android:id="@+id/nameTickerMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/priceTickerMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_market_price"
        android:textColor="#000000"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/priceChangeMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/nameCompanyMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Company: "
        android:layout_marginTop="15sp"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/owningMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/owning"
        android:textColor="#000000"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="15sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"

            >

            <TextView
                android:id="@+id/lotMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lot"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lotCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/plusMore"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="50sp"
                android:background="#FFC107"
                android:text="@string/plus"
                android:textColor="#000000" />

            <Button
                android:id="@+id/minusMore"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="#FDE9AC"
                android:text="@string/minus"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buyMore"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:background="#FFC107"
        android:text="@string/buy"
        android:textSize="20sp" />

    <Button
        android:id="@+id/sellMore"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="126dp"
        android:background="#FDE9AC"
        android:hapticFeedbackEnabled="true"
        android:text="@string/sell"
        android:textSize="20sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="39dp"
        android:layout_height="38dp"
        android:clickable="true" />


</LinearLayout>